# redpandas

./: .gitignore  README.md  pyproject.toml  requirements.txt  requirements_dev.txt  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md
docs/: CHANGELOG.md  ISSUE_TEMPLATE.md  LICENSE.md  README.md  advance_use_redpandas.md  columns_name.md  development.md  installation.md  readme_old.md  using_redpandas.md
docs/api_docs/: index.html  redpandas.html  search.js
docs/api_docs/redpandas/: index.html  redpd_build_station.html  redpd_cohere.html  redpd_config.html  redpd_datawin.html  redpd_df.html  redpd_dq.html  redpd_dw_to_parquet.html  redpd_ensonify.html  redpd_errors.html  redpd_filter.html  redpd_geospatial.html  redpd_gravity.html  redpd_iterator.html  redpd_orientation.html  redpd_plot.html  redpd_preprocess.html  redpd_report.html  redpd_scales.html  redpd_state.html  redpd_tfr.html  redpd_xcorr.html  tests.html
docs/api_docs/redvox-pandas/: index.html
docs/img/: make_figs.py
docs/redpandas/: advance_use_redpandas.md  columns_name.md  development.md  installation.md  using_redpandas.md
docs/redpandas/img/: make_figs.py
docs/tutorials/: make_redpandas_df.md  plot_wiggles.md
examples/: rdvx_dw_to_rpd.py  reports_spectograms.py
examples/skyfall/: README.md  run_all.py  skyfall_acc_vel_disp.py  skyfall_config.py  skyfall_config_file.py  skyfall_dw_to_rpd.py  skyfall_ensonify.py  skyfall_first_run.py  skyfall_gravity.py  skyfall_intro.py  skyfall_loc_rpd.py  skyfall_spinning.py  skyfall_station_specs.py  skyfall_tdr_dw_test.py  skyfall_tdr_pqt.py  skyfall_tdr_rpd.py  skyfall_template_basic_rpd.py  skyfall_tfr_rpd.py
examples/skyfall/archive/: skyfall_config.py  skyfall_location_mag.py  skyfall_tdr_rpd_old.py  skyfall_template_basic_rpd_old.py
examples/skyfall/bounder/: Skyfall_df_bounder.parquet  skyfall_bounder.csv
examples/skyfall/lib/: run_all.py  skyfall_dw.py  skyfall_ensonify.py  skyfall_export.py  skyfall_gravity.py  skyfall_intro.py  skyfall_loc_rpd.py  skyfall_spinning.py  skyfall_station_specs.py  skyfall_tdr_rpd.py  skyfall_tfr_rpd.py
pdoc-templates/: html.mako
redpandas/: __init__.py  redpd_build_station.py  redpd_cohere.py  redpd_config.py  redpd_datawin.py  redpd_df.py  redpd_dq.py  redpd_dw_to_parquet.py  redpd_ensonify.py  redpd_errors.py  redpd_filter.py  redpd_geospatial.py  redpd_gravity.py  redpd_iterator.py  redpd_orientation.py  redpd_plot.py  redpd_preprocess.py  redpd_report.py  redpd_scales.py  redpd_state.py  redpd_tfr.py  redpd_xcorr.py
redpandas/redpd_plot/: coherence.py  mesh.py  mesh_free.py  parameters.py  wiggles.py  wiggles_free.py
redpandas/tests/: __init__.py  boom.py  make_pickle.py  test_plot_wiggle_pandas.py  test_plot_wiggles.py  test_redpd_build_station.py  test_redpd_datawin.py  test_redpd_df.py  test_redpd_plots.py  test_time_shrink.py
redpandas/tests/redpd_plot/: test_plot_mesh.py  (+1 more)
scripts/: clean.sh  docs.sh  publish.sh  test.sh
(+38 files in other folders)
